# sysetup

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pre-commit-seed.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh  system-dependencies.txt
.github/workflows/: build.yml  test-end-to-end.yml
config/: bumpversion.cfg  pre-commit-seed.yaml
docs/: setup-plasma.md
public/: _redirects
shell/: gpu_setup.sh
src/sysetup/: __init__.py  bitwarden.py  context.py  download.py  main.py  packages.py
src/sysetup/cli/: entry_point.py
src/sysetup/context/: __init__.py  action.py  context.py  options.py  secrets_.py  system.py
src/sysetup/linux/: installations.py  packages.py  setup.py
src/sysetup/main/: environment.py  files.py  installations.py  installer.py  main.py  packages.py
src/sysetup/main/files/: __init__.py  assets.py  permissions.py  settings.py  setup.py
src/sysetup/main/linux/: installations.py  packages.py  setup.py
src/sysetup/models/: __init__.py  action.py  options.py  path.py
src/sysetup/utils/: __init__.py  bitwarden.py  download.py  installations.py  secrets.py
sysetup/: constants.py  desktopfiles.py  env.py  environment.py  filemanager.py  files.py  git.py  installer.py  main.py  path.py  starter.py
tests/: Dockerfile  conftest.py  integration-test.sh  test_background.py  test_cli_entry_point.py  test_installer.py  test_main.py
