[project]
name = "sysetup"
version = "1.4.4"
description = "Personal system setup"
authors = [{name = "Quinten Roets", email = "qdr2104@columbia.edu"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "backupmaster >=2.0.5, <3",
    "package-utils[context] >=0.8.2, <1",
    "powercli >=0.3.7, <1",
    "requests >=2.32.3, <3",
    "superpathlib >=2.0.11, <3",
]

[project.optional-dependencies]
dev = [
    "dirhash >=0.5.0, <1",
    "types-requests >=2.32.0.20250306, <3",
    "package-dev-tools >=0.8.0, <1",
    "package-dev-utils >=0.1.6, <1",
]

[project.urls]
"Source Code" = "https://github.com/quintenroets/sysetup"

[project.scripts]
sysetup = "sysetup.cli:entry_point"
exportcrontab = "sysetup.main.files.assets:move_crontab"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
command_line = "-m pytest tests"

[tool.coverage.report]
precision = 4
fail_under = 60

[tool.mypy]
strict = true
no_implicit_reexport = false

[tool.pytest.ini_options]
pythonpath = [
    "src", ".",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # annotated with Any
    "D",       # docstrings
    "G004",    # logging f-string
    "S101",    # assert used
    "D1",       # missing docstrings
    "D200",     # one-line docstring
    "D203",     # conflicts with D211
    "D205",     # blank line between summary and description
    "D212",     # conflicts with D213
    "D401",     # imperative first line
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.package-data]
sysetup = ["assets/scripts/update_wallpaper.js", "py.typed"]
