[project]
name = "sysetup"
version = "1.4.6"
description = "Personal system setup"
authors = [{name = "Quinten Roets", email = "qdr2104@columbia.edu"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "backupmaster >=3.0.0, <4",
    "package-utils[context] >=0.8.3, <1",
    "powercli >=0.4.0, <1",
    "requests >=2.32.3, <3",
    "superpathlib >=2.0.11, <3",
]

[project.optional-dependencies]
dev = [
    "dirhash >=0.5.0, <1",
    "types-requests >=2.32.0.20250306, <3",
    "package-dev-tools >=0.8.1, <1",
]

[project.urls]
"Source Code" = "https://github.com/quintenroets/sysetup"

[project.scripts]
sysetup = "sysetup:entry_point"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
no_implicit_reexport = false

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # annotated with Any
    "D",       # docstrings
    "G004",    # logging f-string
    "S101",    # assert used
    "D1",       # missing docstrings
    "D200",     # one-line docstring
    "D203",     # conflicts with D211
    "D205",     # blank line between summary and description
    "D212",     # conflicts with D213
    "D401",     # imperative first line
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.package-data]
sysetup = ["py.typed"]
